--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-slick": "^0.29.0",
     "sass": "^1.61.0",
     "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
